fix post width overflow

--- a/themes/goofy/source/css/_post.scss
+++ b/themes/goofy/source/css/_post.scss
@@ -1,4 +1,5 @@
 .post {
+  overflow-x: hidden;
   .post-description {
     color: #fff;
     padding: $padding 0;
